2002-08-09  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/sample :

	  - Added sample program.

	* datastruct/Makefile :
	* symtab/Makefile :
	* main/Makefile :

	  - Cleaned up makefiles.

	* parser/Makefile :
	* scanner.l :

	  - Instead of using lex and yacc, use flex and bison.

2002-08-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/Makefile :
	* parser/parser.y :
	* main/Makefile :
	* main/epilog.c :
	* Makefile :

	  - Moved main function into a different file.

2002-08-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf :
	* docs/langspecs :
	* parser/parser.y :
	* parser/scanner.l :

	  - Renamed "elt" or "element" to "memb" or "member" ;
	    "cont" or "containment" to "subst" or "subset".

	* docs/bnf :
	* parser/parser.y :

	  - Took out association/parentheses from the language and parser.

2002-07-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* ChangeLog :

	  - ChangeLog started.

	* datastruct/indexedlist.h :
	* datastruct/indexedlist.c :

	  - Some cleanups.

	  - indexedlist_add() will no longer check for double entries. This
	    is now left for the calling function to do.

	  - Added 2 functions to allow the data pointers to be freed before
	    deletion.

	* symtab/symtab.c :

	  - Changed to reflect modifications to indexedlist.