@@ -21,10 +21,10 @@ libdatastruct.a : index.o indexedlist.o
 	$(AR) -rcs $(@) index.o indexedlist.o
 
 index.o : index.h index.c
-	$(CC) $(CFLAGS) -c index.c -o $(@)
+	$(CC) $(CFLAGS) -o $(@) -c index.c
 	
 indexedlist.o : indexedlist.h indexedlist.c index.h
-	$(CC) $(CFLAGS) -c indexedlist.c -o $(@)
+	$(CC) $(CFLAGS) -o $(@) -c indexedlist.c
 
 clean :
 	$(RM) $(TARGETS) *.o
