@@ -1,2 +1,4 @@
 initially holds(s1,a1,o1);
 trans t_delete1(v1,v2) causes memb(v1, S1) && subst(v2, S2) if holds(v1,v2,O1);
+trans t_add1(v1) causes holds(v1,a1,o1) if true;
+is holds(s1,a1,o2);
