@@ -5,13 +5,22 @@
 
 #include <stdio.h>
 #include <symtab.h>
-
-extern int yyparse();
+#include <parser.h>
 
 int main()
 {
+  yyin = stdin;
+  yyout = stdout;
+
   symtab_init();
   yyparse();
+
+  return 0;
+}
+
+int yyerror(char *error)
+{
+  fprintf(stderr, "%s\n", error);
 
   return 0;
 }
